--- a/status.html
+++ b/status.html
@@ -121,7 +121,7 @@
     
     <h3>1. Order Processing & Dispatch</h3>
     <ul>
-      <li>All confirmed orders placed before <b>6:00 PM</b> are processed and dispatched the <b>same business day</b>.</li>
+      <li>All confirmed orders placed before <b>12:00 PM</b> are processed and dispatched on the <b>same business day</b>, unless delayed due to courier service issues <b>(updated)</b>.</li>
       <li>Orders placed after 6:00 PM will be dispatched on the <b>next business day</b>.</li>
     </ul>
 
@@ -154,8 +154,12 @@
       <li>Products must be in <b>original condition</b>, unused, with all packaging and accessories intact.</li>
       <li>Items not meeting these conditions may be declined for return.</li>
     </ul>
-
-    <h4>4.3 Valid Reasons for Return</h4>
+  <h4>4.3 Proof of Condition Required</h4>
+    <ul>
+      <li>Customers must provide clear evidence such as an unboxing <b>video recorded</b> from the moment the package is opened, showing that the item arrived damaged or defective.
+Returns may be declined if sufficient proof is not provided or if the product appears to have been damaged after delivery.</li>
+    </ul>
+    <h4>4.4 Valid Reasons for Return</h4>
     <ul>
       <li><b>Change of preference is not accepted</b> – Returns <b>cannot</b> be made for reasons like “didn’t like the product” or “changed my mind”.</li>
       <li><b>Defective on Arrival</b> – Products may only be returned if <b>defective or damaged upon delivery</b>.</li>
@@ -170,7 +174,7 @@
       For assistance, please reach us via:<br><br>
       ▪ Facebook: <a href="https://www.facebook.com/thegeek.shop0/" target="_blank">The Geek Shop</a><br>
       ▪ Instagram: <a href="https://www.instagram.com/thegeek.shop0/" target="_blank">@thegeekshop</a><br>
-      ▪ WhatsApp: <a href="https://wa.me/01960788862" target="_blank">WhatsApp</a>
+      ▪ WhatsApp: <a href="https://wa.me/01960902526" target="_blank">WhatsApp</a>
     </p>
   </div>
 </section>
@@ -184,7 +188,7 @@
     <a href="https://www.instagram.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
       <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
     </a>
-        <a href="https://wa.me/01960788862" target="_blank" style="margin: 0 10px;">
+        <a href="https://wa.me/01960902526" target="_blank" style="margin: 0 10px;">
       <img src="whatsapp.png" alt="Instagram" style="width: 30px; height: 30px;">
     </a>
   </div>
@@ -297,4 +301,8 @@
 </script>
 </body>
 </html>
+
+
+
+
 
