--- a/admin.html
+++ b/admin.html
@@ -26,7 +26,6 @@
     </nav>
   </header>
 
- 
   <main class="container">
     <div id="login-panel" class="card" style="display: none;">
       <h2>Admin Login</h2>
@@ -77,7 +76,7 @@
             <select id="add-category" required>
               <option value="Keycaps">Keycaps</option>
               <option value="Switches">Switches</option>
-              <option value="Keyboard and Mouse">Keyboards and Mouse</option>
+              <option value="Keyboard and Mouse">Keyboard and Mouse</option>
               <option value="Accessories and Collectables">Accessories and Collectables</option>
             </select>
           </div>
@@ -101,8 +100,24 @@
           </div>
         </div>
         <div>
-          <label>Description</label>
+          <label><input type="checkbox" id="add-hotdeal"> Hot Deal</label>
+        </div>
+        <div>
+          <label>Specification (shown next to price)</label>
           <textarea id="add-desc"></textarea>
+        </div>
+        <div>
+          <label>Description (full section below images)</label>
+          <textarea id="add-detailed-desc"></textarea>
+        </div>
+        <h3>SEO Optimization</h3>
+        <div>
+          <label>Meta Title</label>
+          <input id="add-meta-title" type="text" placeholder="e.g. GMK Dracula Keycaps - The Geek Shop">
+        </div>
+        <div>
+          <label>Meta Description</label>
+          <textarea id="add-meta-desc" placeholder="Short SEO description (150-160 chars)"></textarea>
         </div>
         <button type="submit">Add Product</button>
       </form>
@@ -120,6 +135,7 @@
               <th>Discount (tk)</th>
               <th>Stock</th>
               <th>Availability</th>
+              <th>Badge</th>
               <th>Status</th>
               <th>Actions</th>
             </tr>
@@ -155,6 +171,4 @@
     </div>
   </main>
 </body>
-
-
 </html>
