--- a/status.html
+++ b/status.html
@@ -84,14 +84,16 @@
 </head>
 <body>
 <header class="site-header">
-  <nav>
-    <a href="index.html" class="logo"><img src="logo.png" alt="Logo" style="height:40px;"></a>
-    <div class="nav-links">
-      <a href="index.html">Products</a>
-      <a href="status.html">Order Status</a>
-      <a href="admin.html">Admin</a>
-    </div>
-  </nav>
+     <nav>
+      <a href="index.html" class="logo">
+        <img src="logo.png" alt="The Geek Shop Logo" style="height: 40px;">
+      </a>
+      <div class="nav-links">
+        <a href="products.html">Products</a>
+        <a href="status.html">Order Status</a>
+        <a id="cart-link" style="cursor: pointer;">Cart (<span id="cart-count">0</span>)</a>
+      </div>
+    </nav>
 </header>
 <div class="container">
   <h1>Order Status</h1>
@@ -180,6 +182,56 @@ Returns may be declined if sufficient proof is not provided or if the product ap
 </section>
 
 
+  <!-- Cart Slider -->
+  <div id="cart-slider" class="cart-slider">
+    <button id="close-cart" class="close-viewer">&times;</button>
+    <h2>Shopping Cart</h2>
+    <div id="cart-items" class="cart-items"></div>
+    <div id="cart-total" class="cart-total"><strong>Total: ৳0</strong></div>
+    <button id="checkout-cart" class="checkout-cart-btn">Checkout</button>
+    <div id="cart-empty" class="muted" style="text-align:center; padding:20px; display:none;">Your cart is empty</div>
+  </div>
+
+  <!-- Cart Checkout Modal -->
+  <div id="cart-checkout-modal" class="modal">
+    <div class="card modal-content">
+      <div class="modal-header">
+        <h2>Checkout (Cart)</h2>
+        <button id="cart-close-modal-btn">Close</button>
+      </div>
+      <form id="cart-checkout-form" class="form">
+        <div id="cart-co-items"></div>
+        <div class="row">
+          <div><label>Delivery Fee</label><input id="cart-co-delivery" readonly></div>
+          <div><label>Total Amount</label><input id="cart-co-total" readonly></div>
+        </div>
+        <div class="row">
+          <div><label>Name</label><input id="cart-co-name" required></div>
+          <div><label>Phone</label><input id="cart-co-phone" type="tel" required></div>
+        </div>
+        <div><label>Address</label><textarea id="cart-co-address" required></textarea></div>
+        <div class="row">
+          <div><label>Payment Method</label>
+            <select id="cart-co-payment" required>
+              <option value="">Select</option>
+              <option value="Cash on Delivery">Cash on Delivery</option>
+              <option value="Bkash">Bkash</option>
+            </select>
+          </div>
+          <div><label>Pay to</label><input id="cart-co-payment-number" readonly></div>
+        </div>
+        <div class="row">
+          <div><label>Pay Now (tk)</label><input id="cart-co-pay-now" readonly></div>
+          <div><label>Due Amount (tk)</label><input id="cart-co-due-amount" readonly></div>
+        </div>
+        <div><label>Transaction ID</label><input id="cart-co-txn"></div>
+        <div><label><input type="checkbox" id="cart-co-policy" required> I agree to the <a href="status.html">Order Policy</a></label></div>
+          <p id="cart-co-note" class="muted"></p>
+        <button id="cart-place-order-btn" type="submit">Place Order</button>
+      </form>
+    </div>
+  
+  </div>
 <footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color:  #000000; font-family: Arial, sans-serif;">
   <div>
     <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
@@ -202,6 +254,7 @@ Returns may be declined if sufficient proof is not provided or if the product ap
 
   const app = initializeApp(firebaseConfig);
   const db = getFirestore(app);
+
   const statusOrder = ['Pending', 'Processing', 'Dispatched', 'Delivered', 'Cancelled'];
 
   document.getElementById('status-form').addEventListener('submit', async e => {
@@ -216,14 +269,16 @@ Returns may be declined if sufficient proof is not provided or if the product ap
     try {
       const q = query(collection(db, 'orders'), where('phone', '==', phone), orderBy('timeISO', 'desc'));
       const snap = await getDocs(q);
+
       result.innerHTML = '';
       if (snap.empty) {
-        result.innerHTML = `<p style="text-align:center;color:var(--muted);">No orders for ${phone}</p>`;
+        result.innerHTML = `<p style="text-align:center;color:var(--muted);">No orders found for ${phone}</p>`;
         return;
       }
 
+      // Load products to check current availability (only for display logic)
       const prodSnap = await getDocs(collection(db, 'products'));
-      const prodMap = {}; 
+      const prodMap = {};
       prodSnap.docs.forEach(d => { prodMap[d.id] = d.data(); });
 
       const grid = document.createElement('div');
@@ -231,16 +286,49 @@ Returns may be declined if sufficient proof is not provided or if the product ap
 
       snap.docs.forEach(doc => {
         const order = doc.data();
-        const product = prodMap[order.productId] || {};
-        const isPreOrder = product.availability === 'Pre Order';
-        const delivery = isPreOrder ? '20–40 days' : '2–5 days';
-        const avail = isPreOrder ? 'Pre-Order' : 'In Stock';
+        const cancelled = order.status === 'Cancelled';
         const curStat = order.status;
         const curIdx = statusOrder.indexOf(curStat);
-        const cancelled = curStat === 'Cancelled';
+        const isDelivered = curStat === 'Delivered';
 
-        const card = document.createElement('div');
-        card.className = `card order-status-card ${cancelled ? 'order-cancelled' : ''}`;
+        // Determine items (single or multi)
+        const isMulti = order.items && Array.isArray(order.items) && order.items.length > 0;
+        const items = isMulti ? order.items : [{
+          productId: order.productId,
+          productName: order.productName || 'Unknown Product',
+          color: order.color || '',
+          quantity: order.quantity || 1,
+          wasPreOrder: order.wasPreOrder || false  // fallback if old order
+        }];
+
+        // Determine if ANY item was pre-order at time of purchase
+        const hasPreOrderItem = items.some(item => item.wasPreOrder === true);
+
+        // Final delivery estimate logic
+        let deliveryText = '';
+        if (isDelivered) {
+          const deliveredDate = order.deliveredAt ? new Date(order.deliveredAt).toLocaleDateString('en-GB') : 'N/A';
+          deliveryText = `<strong style="color:#22c55e">Delivered on: ${deliveredDate}</strong>`;
+        } else {
+          const days = hasPreOrderItem ? '20–40 days' : '3–7 days';
+          deliveryText = `Est. Delivery: <strong>${days}</strong>`;
+        }
+
+        // Build product list HTML
+        let productHTML = '';
+        items.forEach((item, index) => {
+          const prod = prodMap[item.productId] || {};
+          const currentIsPreOrder = prod.availability === 'Pre Order';
+          const avail = item.wasPreOrder ? 'Pre-Order' : (currentIsPreOrder ? 'Pre-Order' : 'In Stock');
+
+          productHTML += `
+            <div style="margin-bottom: ${index < items.length - 1 ? '12px' : '0'}; padding-bottom: ${index < items.length - 1 ? '12px' : '0'}; ${index < items.length - 1 ? 'border-bottom: 1px dashed var(--glass-border);' : ''}">
+              <div><strong>${item.productName}</strong> ${item.color ? `(${item.color})` : ''}</div>
+              <div class="muted">Quantity: ${item.quantity}</div>
+              <div class="muted">${avail} • ${deliveryText}</div>
+            </div>
+          `;
+        });
 
         // Build status timeline
         let statusHTML = '';
@@ -255,14 +343,21 @@ Returns may be declined if sufficient proof is not provided or if the product ap
           let itemClass = '';
 
           if (isCancelled) {
-            icon = '✗';           // Real Cross symbol
+            icon = '✗';
             colorClass = 'status-red cancelled';
             textColor = '#ef4444';
             itemClass = 'cancelled';
           } else if (isCompleted || (isCurrent && !cancelled)) {
-            icon = '✓';       // Real Checkmark symbol
+            icon = '✓';
             colorClass = 'status-green';
             textColor = '#22c55e';
+          }
+
+          // Special green highlight for Delivered
+          if (st === 'Delivered' && isDelivered) {
+            textColor = '#22c55e';
+            colorClass = 'status-green';
+            icon = '✓';
           }
 
           statusHTML += `
@@ -272,23 +367,23 @@ Returns may be declined if sufficient proof is not provided or if the product ap
             </div>`;
         });
 
+        const card = document.createElement('div');
+        card.className = `card order-status-card ${cancelled ? 'order-cancelled' : ''}`;
+
         card.innerHTML = `
           <div class="order-status-left">
-            <div><strong>${order.productName}</strong></div>
-            <div class="muted">Color: ${order.color || '—'}</div>
-            <div class="muted">Quantity: ${order.quantity}</div>
-            <div class="price-line">
+            ${productHTML}
+            <div class="price-line" style="margin-top: 12px;">
               Paid: ৳${order.paid}
               ${order.due > 0 ? `<span style="color:#d32f2f"> (Due: ৳${order.due})</span>` : ''}
             </div>
-            <div class="muted">${avail}</div>
-            <div class="muted">Est. Delivery: <strong>${delivery}</strong></div>
-            <div class="muted">Ordered on: ${new Date(order.timeISO).toLocaleDateString()}</div>
+            <div class="muted">Ordered on: ${new Date(order.timeISO).toLocaleDateString('en-GB')}</div>
           </div>
           <div class="order-status-right">
             ${statusHTML}
           </div>
         `;
+
         grid.appendChild(card);
       });
 
@@ -301,6 +396,12 @@ Returns may be declined if sufficient proof is not provided or if the product ap
 </script>
 </body>
 </html>
+
+
+
+
+
+
 
 
 
